--- a/src/app/template/topo/topo.component.html
+++ b/src/app/template/topo/topo.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a class="navbar-brand" href="#">Academify</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="bi bi-award-fill"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="#">Página Inicial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Listar Alunos</a>
+                    <a class="nav-link" href="#"> Alunos</a>
                 </li>
             </ul>
         </div>
