--- a/src/app/template/rodape/rodape.component.html
+++ b/src/app/template/rodape/rodape.component.html
@@ -1,1 +1,5 @@
-<p>rodape works!</p>
+<footer class="footer mt-auto py-3 bg-light">
+    <div class="container text-center">
+        <span class="text-muted">© 2023 Academify. Todos os direitos reservados.</span>
+    </div>
+</footer>
