--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,5 @@
     <p>Explore as funcionalidades do nosso sistema acadêmico.</p>
     <p>Aqui você pode encontrar informações sobre cursos, professores e alunos.</p>
     
-    <a href="listar-alunos.html" class="btn btn-primary mt-3">Ir para Lista de Alunos</a>
+    <a href="aluno-lista" class="btn btn-primary mt-3">Ir para Lista de Alunos</a>
 </div>
