--- a/src/app/template/topo/topo.component.html
+++ b/src/app/template/topo/topo.component.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Página Inicial</a>
+                    <a class="nav-link" href="home">Página Inicial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Alunos</a>
+                    <a class="nav-link" href="aluno-lista"> Alunos</a>
                 </li>
             </ul>
         </div>
