--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <h2 class="mt-5">Bem-vindo à Academify</h2>
     <p>Explore as funcionalidades do nosso sistema acadêmico.</p>
-    <p>Aqui você pode encontrar informações sobre cursos, professores e alunos.</p>
+    <p>Aqui você pode encontrar informações sobre alunos.</p>
     
-    <a href="aluno-lista" class="btn btn-primary mt-3">Ir para Lista de Alunos</a>
+    <a href="aluno-lista" class="btn btn-primary mt-2">Ir para Lista de Alunos</a>
+    <br>
+    <a href="novo-aluno" class="btn btn-primary mt-2">Cadastrar novo aluno</a>
 </div>
