--- a/src/app/novo-aluno/novo-aluno.component.html
+++ b/src/app/novo-aluno/novo-aluno.component.html
@@ -1,4 +1,3 @@
-<!-- novo-aluno.component.html -->
 <form [formGroup]="alunoForm" (ngSubmit)="salvarAluno()">
   <mat-form-field>
     <mat-label>Nome</mat-label>
@@ -22,3 +21,5 @@
 
   <button mat-raised-button color="primary" type="submit">Salvar Aluno</button>
 </form>
+
+<app-alerta-sucesso *ngIf="cadastroSucesso" [mensagem]="'Aluno cadastrado com sucesso!'" (fecharAlertaEvent)="fecharMensagem()"></app-alerta-sucesso>
