--- a/src/app/novo-aluno/novo-aluno.component.html
+++ b/src/app/novo-aluno/novo-aluno.component.html
@@ -1,4 +1,3 @@
-<!-- novo-aluno.component.html -->
 <form [formGroup]="alunoForm" (ngSubmit)="salvarAluno()">
   <mat-form-field>
     <mat-label>Nome</mat-label>
@@ -10,10 +9,11 @@
     <input matInput formControlName="matricula" placeholder="Digite a matrícula" required>
   </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Data de Nascimento</mat-label>
-    <input matInput formControlName="nascimento" placeholder="DD/MM/YYYY" required>
-  </mat-form-field>
+<mat-form-field>
+  <mat-label>Data de Nascimento</mat-label>
+  <input matInput formControlName="nascimento" placeholder="DD/MM/YYYY" appDateFormat required>
+</mat-form-field>
+
 
   <mat-form-field>
     <mat-label>Data de Cadastro</mat-label>
