--- a/src/app/aluno-lista/aluno-lista.component.css
+++ b/src/app/aluno-lista/aluno-lista.component.css
@@ -10,3 +10,8 @@ table {
 td, th {
   width: 25%;
 }
+
+.acao-buttons {
+  display: flex;
+  gap: 8px; /* Espaço entre os botões, ajuste conforme necessário */
+}
