--- a/src/app/aluno-lista/aluno-lista.component.html
+++ b/src/app/aluno-lista/aluno-lista.component.html
@@ -6,7 +6,7 @@
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
-    
+
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
@@ -24,29 +24,37 @@
       <td mat-cell *matCellDef="let row"> {{row.matricula}} </td>
     </ng-container>
 
-   
+
     <ng-container matColumnDef="nascimento">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nascimento </th>
       <td mat-cell *matCellDef="let row"> {{row.nascimento | date:'dd/MM/yyyy'}} </td>
     </ng-container>
 
-  
+
     <ng-container matColumnDef="dataHoraCadastro">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Cadastro </th>
       <td mat-cell *matCellDef="let aluno"> {{ aluno.dataHoraCadastro | date:'dd/MM/yyyy HH:mm' }} </td>
     </ng-container>
 
- 
-    <ng-container matColumnDef="acao">
-      <th mat-header-cell *matHeaderCellDef> Ação </th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-icon-button color="warn" (click)="removerAluno(row)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
 
-   
+  <!-- Adicione o botão de editar na coluna de ação -->
+<ng-container matColumnDef="acao">
+  <th mat-header-cell *matHeaderCellDef> Ação </th>
+  <td mat-cell *matCellDef="let row">
+    <div class="acao-buttons">
+      <button mat-icon-button color="primary" (click)="editarAluno(row.id)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="removerAluno(row)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </div>
+  </td>
+</ng-container>
+
+
+
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
