--- a/src/app/editaraluno/editaraluno.component.css
+++ b/src/app/editaraluno/editaraluno.component.css
@@ -1,12 +1,16 @@
 .form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .form-field {
-    width: 100%;
-    margin-bottom: 15px; /* Adjust this value for the desired spacing between form fields */
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.center-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.center-button {
+  margin-top: 20px; /* Ajuste conforme necessário para a distância desejada entre os campos e o botão */
+}
