Alterando nome do componente editar aluno

--- a/src/app/editar-aluno/editar-aluno.component.css
+++ b/src/app/editar-aluno/editar-aluno.component.css
@@ -12,5 +12,5 @@
 }
 
 .center-button {
-  margin-top: 20px; /* Ajuste conforme necessário para a distância desejada entre os campos e o botão */
+  margin-top: 20px;
 }
