--- a/src/app/novo-aluno/novo-aluno.component.css
+++ b/src/app/novo-aluno/novo-aluno.component.css
@@ -1,13 +1,17 @@
-form {
-  max-width: 400px;
-  margin: auto;
-  padding: 16px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
 }
 
-mat-form-field {
-  width: 100%;
+.form-field {
+  width: 50%;
+  margin-bottom: 10px;
 }
 
 button {
-  margin-top: 16px;
+  background-color: #000 !important;
+  color: #fff !important;
 }
