--- a/src/app/aluno-lista/aluno-lista.component.css
+++ b/src/app/aluno-lista/aluno-lista.component.css
@@ -13,5 +13,6 @@ td, th {
 
 .acao-buttons {
   display: flex;
-  gap: 8px; /* Espaço entre os botões, ajuste conforme necessário */
+  gap: 8px; 
 }
+
