--- a/src/app/aluno-lista/aluno-lista.component.html
+++ b/src/app/aluno-lista/aluno-lista.component.html
@@ -28,7 +28,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nascimento </th>
       <td mat-cell *matCellDef="let row">{{ row.nascimento | date: 'dd/MM/yyyy' }}</td>
     </ng-container>
-    
+
 
 
     <ng-container matColumnDef="dataHoraCadastro">
@@ -37,23 +37,22 @@
     </ng-container>
 
 
-  <!-- Adicione o botão de editar na coluna de ação -->
-<ng-container matColumnDef="acao">
-  <th mat-header-cell *matHeaderCellDef> Ação </th>
-  <td mat-cell *matCellDef="let row">
-    <div class="acao-buttons">
-      <button mat-icon-button color="primary" (click)="editarAluno(row.id)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button color="warn" (click)="removerAluno(row)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </div>
-  </td>
-</ng-container>
-
-
-
+    <ng-container matColumnDef="acao">
+      <th mat-header-cell *matHeaderCellDef> Ação </th>
+      <td mat-cell *matCellDef="let row">
+        <div class="acao-buttons">
+          <button mat-icon-button color="secondary" (click)="editarAluno(row.id)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="removerAluno(row)">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button color="accent" (click)="abrirDetalhesAluno(row)">
+            <mat-icon>search</mat-icon>
+          </button>
+        </div>
+      </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
