--- a/src/app/template/topo/topo.component.html
+++ b/src/app/template/topo/topo.component.html
@@ -1,16 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">Academify</a>
+        <a class="navbar-brand" href="#">
+            <span class="bi bi-mortarboard-fill"></span>&nbsp;
+            Academify
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="bi bi-award-fill"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="home">Página Inicial</a>
+                    <a class="nav-link" href="home">
+                        <span class="bi bi-house-door-fill"></span>&nbsp; Página Inicial
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aluno-lista"> Alunos</a>
+                    <a class="nav-link" href="aluno-lista">
+                        <span class="bi bi-people-fill"></span>&nbsp; Alunos
+                    </a>
                 </li>
             </ul>
         </div>
